airshift - fixed small screen padding problem

--- a/Day- Ex5 - Airshift/scss/_app.scss
+++ b/Day- Ex5 - Airshift/scss/_app.scss
@@ -832,7 +832,14 @@ p {
       }
     }
   }
+  .slide-content {
+    height: 66%;
+    padding-top: 17%;
+  }
   .slide-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     .heading-main {
       font-size: 1.3rem;
     }
